// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correct with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expenses totalling: 
    $25.39
  </h1>
</div>
`;

exports[`should render ExpenseSummary correct with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23423
     expenses totalling: 
    $252,323,423.39
  </h1>
</div>
`;
